# the_timed_experiment

./: Cargo.toml
the_timed_experiment-lib/: Cargo.toml
the_timed_experiment-terminal/: Cargo.toml  build.rs
the_timed_experiment-terminal/src/: main.rs
