[package]
authors = ["Luctius Invictus <luctius@luctius@gmail.com>"]
repository = "https://github.com/luctius/the_timed_experiment"
edition = "2018"
name = "the_timed_experiment-lib"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rl_mapgen={ version = "*", git="https://github.com/luctius/rl_tools.git", branch="main" }
rl_utils={  version = "*", git="https://github.com/luctius/rl_tools.git", branch="main" }
rl_ecs={    version = "*", git="https://github.com/luctius/rl_tools.git", branch="main" }
rl_fov={    version = "*", git="https://github.com/luctius/rl_tools.git", branch="main" }
#pathfinding = "*"
##rlua = "*"
#serde = "*"
#app_dirs = "*"
#rustyline = "*"
#termion = "*"
#yansi = "*"
#rand = "*"
#textwrap = "*"
#ron = "*" #Rust Object Notation
##rhai = "*" #scripting language
##dyon = "*"
##gluon = "*"
##mun = "*"
##pulldown-cmark = "0.1.0"
##recs = "2.0.1"
#savefile = "*"
#undo = "*"
